--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,4 +1,5 @@
 alembic==1.14.1
+annotated-doc==0.0.3
 annotated-types==0.7.0
 anyio==4.5.2
 blinker==1.8.2
@@ -13,6 +14,7 @@ earthengine-api==1.1.5
 email-validator==2.3.0
 exceptiongroup==1.3.0
 Faker==35.2.2
+fastapi==0.120.0
 Flask==3.0.3
 Flask-Cors==5.0.0
 Flask-JWT-Extended==4.6.0
@@ -30,6 +32,7 @@ google-crc32c==1.5.0
 google-resumable-media==2.7.2
 googleapis-common-protos==1.71.0
 greenlet==3.1.1
+groq==0.33.0
 h11==0.16.0
 httpcore==1.0.9
 httplib2==0.31.0
@@ -65,14 +68,12 @@ six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.44
 SQLAlchemy-serializer==1.4.12
+starlette==0.44.0
 tqdm==4.67.1
 typing_extensions==4.13.2
 uritemplate==4.1.1
 urllib3==2.2.3
+uvicorn==0.33.0
 Werkzeug==3.0.6
 xyzservices==2025.4.0
 zipp==3.20.2
-fastapi
-uvicorn
-groq
-
