--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -101,3 +101,8 @@ tqdm==4.67.1
 typing_extensions==4.13.2
 Werkzeug==3.0.6
 zipp==3.20.2
+Flask==2.3.2
+pandas==2.1.0
+scikit-learn==1.3.0
+earthengine-api==0.1.366
+
