--- a/frontend/client/package.json
+++ b/frontend/client/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "groq-sdk": "^0.34.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.546.0",
     "next": "15.5.6",
