--- a/frontend/client/package.json
+++ b/frontend/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "GreenLensLangata",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -12,7 +12,9 @@
     "lucide-react": "^0.546.0",
     "next": "15.5.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "formik": "^2.4.6",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
