--- a/frontend/client/package.json
+++ b/frontend/client/package.json
@@ -1,32 +1,34 @@
 {
-  "name": "greenlenslangata",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "next dev --turbopack",
+    "build": "next build --turbopack",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint"
   },
   "dependencies": {
-    "date-fns": "^2.29.3",
+    "date-fns": "^4.1.0",
+    "formik": "^2.4.6",
+    "groq-sdk": "^0.34.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.546.0",
-    "next": "13.4.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hot-toast": "^2.4.0",
-    "react-leaflet": "^4.2.1",
-    "react-query": "^3.39.3",
-    "react-toastify": "^9.1.3",
-    "recharts": "^2.12.0",
-    "yup": "^1.1.1"
+    "next": "15.5.6",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-hot-toast": "^2.6.0",
+    "react-leaflet": "^5.0.0",
+    "recharts": "^3.3.0",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.14",
-    "eslint": "^8.45.0",
-    "eslint-config-next": "13.4.4",
-    "postcss": "^8.4.26",
-    "tailwindcss": "^3.3.2"
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9",
+    "eslint-config-next": "15.5.6",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.16"
   }
 }
