--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -103,5 +103,5 @@ urllib3==2.2.3
 wcwidth==0.2.13
 Werkzeug==3.0.6
 xyzservices==2025.4.0
-zipp==3.20.2
-email-validator
+pandas==2.0.3
+scikit-learn==1.3.0
