--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,29 +1,37 @@
 alembic==1.14.1
+aniso8601==10.0.1
 annotated-doc==0.0.3
 annotated-types==0.7.0
 anyio==4.5.2
 asttokens==3.0.0
 backcall==0.2.0
+bcrypt==5.0.0
 blinker==1.8.2
 branca==0.8.2
 cachetools==5.5.2
 certifi==2025.10.5
 charset-normalizer==3.4.4
 click==8.1.8
+colorama==0.4.6
 decorator==5.2.1
+distlib==0.3.9
 distro==1.9.0
 dnspython==2.6.1
 earthengine-api==1.1.5
 email-validator==2.3.0
 exceptiongroup==1.3.0
-fastapi==0.120.0
 executing==2.2.0
 Faker==35.2.2
+fastapi==0.120.0
+filelock==3.16.1
 Flask==3.0.3
+Flask-Bcrypt==1.0.1
 Flask-Cors==5.0.0
 Flask-JWT-Extended==4.6.0
+Flask-Login==0.6.3
 flask-marshmallow==1.2.1
 Flask-Migrate==4.1.0
+Flask-RESTful==0.3.10
 Flask-SQLAlchemy==3.1.1
 folium==0.18.0
 google-api-core==2.26.0
@@ -37,6 +45,7 @@ google-resumable-media==2.7.2
 googleapis-common-protos==1.71.0
 greenlet==3.1.1
 groq==0.33.0
+gunicorn==23.0.0
 h11==0.16.0
 httpcore==1.0.9
 httplib2==0.31.0
@@ -64,6 +73,8 @@ parso==0.8.4
 pexpect==4.9.0
 pickleshare==0.7.5
 pillow==10.4.0
+pipenv==2024.4.1
+platformdirs==4.3.6
 prompt_toolkit==3.0.51
 proto-plus==1.26.1
 protobuf==5.29.5
@@ -88,20 +99,19 @@ six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.44
 SQLAlchemy-serializer==1.4.12
-starlette==0.44.0
 stack-data==0.6.3
+starlette==0.44.0
 threadpoolctl==3.5.0
 tomli==2.2.1
 tqdm==4.67.1
 traitlets==5.14.3
 typing_extensions==4.13.2
-uritemplate==4.1.1
-uvicorn==0.33.0
 tzdata==2025.2
 uritemplate==4.1.1
 urllib3==2.2.3
+uvicorn==0.33.0
+virtualenv==20.31.2
 wcwidth==0.2.13
 Werkzeug==3.0.6
 xyzservices==2025.4.0
-pandas==2.0.3
-scikit-learn==1.3.0
+zipp==3.20.2
