--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,34 +1,24 @@
 alembic==1.14.1
-annotated-doc==0.0.3
 annotated-types==0.7.0
 anyio==4.5.2
-asttokens==3.0.0
-backcall==0.2.0
 blinker==1.8.2
-branca==0.8.2
 cachetools==5.5.2
 certifi==2025.10.5
 charset-normalizer==3.4.4
 click==8.1.8
-decorator==5.2.1
 distro==1.9.0
 dnspython==2.6.1
 earthengine-api==1.1.5
 email-validator==2.3.0
 exceptiongroup==1.3.0
-fastapi==0.120.0
-executing==2.2.0
-Faker==35.2.2
 Flask==3.0.3
 Flask-Cors==5.0.0
 Flask-JWT-Extended==4.6.0
-flask-marshmallow==1.2.1
 Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
-folium==0.18.0
-google-api-core==2.26.0
+google-api-core==2.28.1
 google-api-python-client==2.185.0
-google-auth==2.41.1
+google-auth==2.42.0
 google-auth-httplib2==0.2.0
 google-cloud-core==2.4.3
 google-cloud-storage==3.4.1
@@ -44,64 +34,26 @@ httpx==0.28.1
 idna==3.11
 importlib_metadata==8.5.0
 importlib_resources==6.4.5
-ipdb==0.13.13
-ipython==8.12.3
 itsdangerous==2.2.0
-jedi==0.19.2
 Jinja2==3.1.6
-jiter==0.9.1
-joblib==1.4.2
 Mako==1.3.10
 MarkupSafe==2.1.5
-marshmallow==3.22.0
-marshmallow-sqlalchemy==1.1.1
-matplotlib-inline==0.1.7
-numpy==1.24.4
-openai==2.2.0
-packaging==25.0
-pandas==2.0.3
-parso==0.8.4
-pexpect==4.9.0
-pickleshare==0.7.5
-pillow==10.4.0
-prompt_toolkit==3.0.51
 proto-plus==1.26.1
 protobuf==5.29.5
-psycopg2-binary==2.9.10
-ptyprocess==0.7.0
-pure_eval==0.2.3
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pydantic==2.10.6
 pydantic_core==2.27.2
-Pygments==2.19.2
 PyJWT==2.9.0
 pyparsing==3.1.4
-python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
-pytz==2025.2
 requests==2.32.4
 rsa==4.9.1
-scikit-learn==1.3.0
-scipy==1.10.1
-six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.44
 SQLAlchemy-serializer==1.4.12
-starlette==0.44.0
-stack-data==0.6.3
-threadpoolctl==3.5.0
-tomli==2.2.1
-tqdm==4.67.1
-traitlets==5.14.3
 typing_extensions==4.13.2
 uritemplate==4.1.1
-uvicorn==0.33.0
-tzdata==2025.2
-uritemplate==4.1.1
 urllib3==2.2.3
-wcwidth==0.2.13
 Werkzeug==3.0.6
-xyzservices==2025.4.0
-pandas==2.0.3
-scikit-learn==1.3.0
+zipp==3.20.2
