--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -12,6 +12,7 @@ certifi==2025.10.5
 charset-normalizer==3.4.4
 click==8.1.8
 colorama==0.4.6
+coverage==7.6.1
 decorator==5.2.1
 distlib==0.3.9
 distro==1.9.0
@@ -51,8 +52,10 @@ httpx==0.28.1
 idna==3.11
 importlib_metadata==8.5.0
 importlib_resources==6.4.5
+iniconfig==2.1.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
+jiter==0.9.1
 Mako==1.3.10
 MarkupSafe==2.1.5
 marshmallow==3.22.0
@@ -68,18 +71,27 @@ pickleshare==0.7.5
 pillow==10.4.0
 pipenv==2024.4.1
 platformdirs==4.3.6
+pluggy==1.5.0
 prompt_toolkit==3.0.51
 proto-plus==1.26.1
 protobuf==5.29.5
+ptyprocess==0.7.0
+pure_eval==0.2.3
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pydantic==2.10.6
 pydantic_core==2.27.2
 PyJWT==2.9.0
 pyparsing==3.1.4
+pytest==8.3.5
+pytest-cov==5.0.0
+pytest-flask==1.3.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+pytz==2025.2
 requests==2.32.4
 rsa==4.9.1
+six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.44
 SQLAlchemy-serializer==1.4.12
