--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,113 +1,80 @@
 alembic==1.14.1
-aniso8601==10.0.1
-annotated-doc==0.0.3
+altair==5.4.1
 annotated-types==0.7.0
 anyio==4.5.2
-asttokens==3.0.0
-backcall==0.2.0
-bcrypt==5.0.0
+attrs==25.3.0
 blinker==1.8.2
 cachetools==5.5.2
 certifi==2025.10.5
 charset-normalizer==3.4.4
 click==8.1.8
-colorama==0.4.6
-coverage==7.6.1
-decorator==5.2.1
-distlib==0.3.9
 distro==1.9.0
 dnspython==2.6.1
-earthengine-api==1.1.5
 email-validator==2.3.0
 exceptiongroup==1.3.0
-executing==2.2.0
 Faker==35.2.2
-fastapi==0.120.0
-filelock==3.16.1
 Flask==3.0.3
-Flask-Bcrypt==1.0.1
 Flask-Cors==5.0.0
 Flask-JWT-Extended==4.6.0
-Flask-Login==0.6.3
 flask-marshmallow==1.2.1
 Flask-Migrate==4.1.0
-Flask-RESTful==0.3.10
 Flask-SQLAlchemy==3.1.1
-google-api-core==2.28.1
-google-api-python-client==2.185.0
-google-auth==2.42.0
-google-auth-httplib2==0.2.0
-google-cloud-core==2.4.3
-google-cloud-storage==3.4.1
-google-crc32c==1.5.0
-google-resumable-media==2.7.2
-googleapis-common-protos==1.71.0
+gitdb==4.0.12
+GitPython==3.1.45
 greenlet==3.1.1
 groq==0.33.0
 gunicorn==23.0.0
 h11==0.16.0
 httpcore==1.0.9
-httplib2==0.31.0
 httpx==0.28.1
 idna==3.11
 importlib_metadata==8.5.0
 importlib_resources==6.4.5
-iniconfig==2.1.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 jiter==0.9.1
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
 Mako==1.3.10
+markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 marshmallow==3.22.0
 marshmallow-sqlalchemy==1.1.1
-matplotlib-inline==0.1.7
+mdurl==0.1.2
+narwhals==1.42.1
 numpy==1.24.4
 openai==2.2.0
-packaging==25.0
+packaging==24.2
 pandas==2.0.3
-parso==0.8.4
-pexpect==4.9.0
-pickleshare==0.7.5
 pillow==10.4.0
-pipenv==2024.4.1
-platformdirs==4.3.6
-pluggy==1.5.0
-prompt_toolkit==3.0.51
-proto-plus==1.26.1
+pkgutil_resolve_name==1.3.10
 protobuf==5.29.5
-ptyprocess==0.7.0
-pure_eval==0.2.3
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
+psycopg2-binary==2.9.10
+pyarrow==17.0.0
 pydantic==2.10.6
 pydantic_core==2.27.2
+pydeck==0.9.1
+Pygments==2.19.2
 PyJWT==2.9.0
-pyparsing==3.1.4
-pytest==8.3.5
-pytest-cov==5.0.0
-pytest-flask==1.3.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2025.2
+referencing==0.35.1
 requests==2.32.4
-rsa==4.9.1
+rich==13.9.4
+rpds-py==0.20.1
 six==1.17.0
+smmap==5.0.2
 sniffio==1.3.1
-SQLAlchemy==2.0.44
-SQLAlchemy-serializer==1.4.12
-stack-data==0.6.3
-starlette==0.44.0
-threadpoolctl==3.5.0
-tomli==2.2.1
+SQLAlchemy==2.0.43
+streamlit==1.40.1
+tenacity==9.0.0
+toml==0.10.2
+tornado==6.4.2
 tqdm==4.67.1
-traitlets==5.14.3
 typing_extensions==4.13.2
 tzdata==2025.2
-uritemplate==4.1.1
 urllib3==2.2.3
-uvicorn==0.33.0
-virtualenv==20.31.2
-wcwidth==0.2.13
+watchdog==4.0.2
 Werkzeug==3.0.6
-xyzservices==2025.4.0
 zipp==3.20.2
