--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -67,6 +67,7 @@ six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
 SQLAlchemy==2.0.43
+SQLAlchemy-serializer==1.4.12
 streamlit==1.40.1
 tenacity==9.0.0
 toml==0.10.2
