--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -10,6 +10,7 @@ charset-normalizer==3.4.4
 click==8.1.8
 distro==1.9.0
 dnspython==2.6.1
+earthengine-api==1.1.5
 email-validator==2.3.0
 exceptiongroup==1.3.0
 Faker==35.2.2
@@ -21,11 +22,21 @@ Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
 gitdb==4.0.12
 GitPython==3.1.45
+google-api-core==2.28.1
+google-api-python-client==2.185.0
+google-auth==2.42.0
+google-auth-httplib2==0.2.0
+google-cloud-core==2.4.3
+google-cloud-storage==3.4.1
+google-crc32c==1.5.0
+google-resumable-media==2.7.2
+googleapis-common-protos==1.71.0
 greenlet==3.1.1
 groq==0.33.0
 gunicorn==23.0.0
 h11==0.16.0
 httpcore==1.0.9
+httplib2==0.31.0
 httpx==0.28.1
 idna==3.11
 importlib_metadata==8.5.0
@@ -48,14 +59,18 @@ packaging==24.2
 pandas==2.0.3
 pillow==10.4.0
 pkgutil_resolve_name==1.3.10
+proto-plus==1.26.1
 protobuf==5.29.5
 psycopg2-binary==2.9.10
 pyarrow==17.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
 pydantic==2.10.6
 pydantic_core==2.27.2
 pydeck==0.9.1
 Pygments==2.19.2
 PyJWT==2.9.0
+pyparsing==3.1.4
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2025.2
@@ -63,6 +78,7 @@ referencing==0.35.1
 requests==2.32.4
 rich==13.9.4
 rpds-py==0.20.1
+rsa==4.9.1
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
@@ -75,6 +91,7 @@ tornado==6.4.2
 tqdm==4.67.1
 typing_extensions==4.13.2
 tzdata==2025.2
+uritemplate==4.1.1
 urllib3==2.2.3
 watchdog==4.0.2
 Werkzeug==3.0.6
