--- a/render.yaml
+++ b/render.yaml
@@ -5,6 +5,7 @@ services:
     runtime: python
     buildCommand: |
       cd server
+      pip install --upgrade pip setuptools wheel
       pip install -r requirements.txt
       export FLASK_APP=wsgi.py
       flask db upgrade
